[gd_scene load_steps=13 format=4 uid="uid://cfys6xbuifyf2"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_fomo4"]
[ext_resource type="AudioStream" uid="uid://dseokghg8jly0" path="res://Resources/Sounds/Goblins_Den_(Regular).wav" id="2_gugrd"]
[ext_resource type="TileSet" uid="uid://fyvg60bdsib1" path="res://TileSets/tileset.tres" id="3_tx6oh"]
[ext_resource type="Script" path="res://Scripts/level_tile_map.gd" id="4_h0wkv"]
[ext_resource type="PackedScene" uid="uid://2qtrevekgf1s" path="res://Scenes/player_boy_spawn.tscn" id="5_c2ihi"]
[ext_resource type="PackedScene" uid="uid://4drxtr7s3djb" path="res://Scenes/level_transition.tscn" id="5_nx7kk"]
[ext_resource type="PackedScene" uid="uid://ccoq268mvbkl2" path="res://Scenes/pressure_plate.tscn" id="6_br5cs"]
[ext_resource type="Script" path="res://Scripts/puzzle_01.gd" id="8_p6y7p"]
[ext_resource type="PackedScene" uid="uid://bbrauxhgcd8n0" path="res://Scenes/barred_door.tscn" id="9_n3wtj"]
[ext_resource type="PackedScene" uid="uid://bs0cuyxxwvgxr" path="res://Scenes/box.tscn" id="11_ej232"]
[ext_resource type="PackedScene" uid="uid://cqag1wijhivk" path="res://Scenes/torch_hidden.tscn" id="11_vwif8"]
[ext_resource type="PackedScene" uid="uid://bsrs5pghdyja3" path="res://Scenes/torch.tscn" id="12_0kspe"]

[node name="castle" type="Node2D"]
script = ExtResource("1_fomo4")
music = ExtResource("2_gugrd")

[node name="TileLayers" type="Node2D" parent="."]

[node name="GroundTileLayers" type="TileMapLayer" parent="TileLayers"]
tile_map_data = PackedByteArray("AAARAAwABAADAAwAAAARAAsABAACAAsAAAARAAoABAAJAAwAAAARAAkABAADAAwAAAARAAgABAAJAAwAAAARAAcABAAGAAwAAAARAAYABAAGAAsAAAARAAUABAACAAsAAAARAAQABAAJAAwAAAARAAMABAADAAwAAAARAAIABAACAAsAAAARAAEABAABAAIAAAARAAAABAABAAAAAAAQAAwABAADAAwAAAAQAAsABAAEAAwAAAAQAAoABAADAAsAAAAQAAkABAAEAAsAAAAQAAgABAAJAAwAAAAQAAcABAAJAAwAAAAQAAYABAAJAAwAAAAQAAUABAAEAAwAAAAQAAQABAADAAsAAAAQAAMABAAEAAsAAAAQAAIABAACAAsAAAAQAAEABAABAAIAAAAQAAAABAACAAAAAAAPAAwABAADAAwAAAAPAAsABAAJAAwAAAAPAAoABAAJAAwAAAAPAAkABAAJAAwAAAAPAAgABAAJAAwAAAAPAAcABAAJAAwAAAAPAAYABAAJAAwAAAAPAAUABAAJAAwAAAAPAAQABAAJAAwAAAAPAAMABAAJAAwAAAAPAAIABAACAAsAAAAPAAEABAABAAIAAAAPAAAABAABAAAAAAAOAAwABAADAAwAAAAOAAsABAAJAAwAAAAOAAoABAAJAAwAAAAOAAkABAAJAAwAAAAOAAgABAAJAAwAAAAOAAcABAAJAAwAAAAOAAYABAAJAAwAAAAOAAUABAAJAAwAAAAOAAQABAAJAAwAAAAOAAMABAAJAAsAAAAOAAIABAACAAsAAAAOAAEABAABAAIAAAAOAAAABAABAAAAAAANAAwABAADAAwAAAANAAsABAAJAAwAAAANAAoABAAJAAwAAAANAAkABAAJAAwAAAANAAgABAAJAAwAAAANAAcABAAJAAwAAAANAAYABAAJAAwAAAANAAUABAAJAAwAAAANAAQABAAJAAwAAAANAAMABAAJAAwAAAANAAIABAACAAsAAAANAAEABAAIAAEAAAANAAAABAAIAAAAAAAMAAwABAADAAwAAAAMAAsABAAJAAwAAAAMAAoABAAJAAwAAAAMAAkABAAJAAwAAAAMAAgABAAJAAwAAAAMAAcABAAJAAwAAAAMAAYABAAJAAwAAAAMAAUABAAJAAwAAAAMAAQABAAJAAwAAAAMAAMABAAJAAwAAAAMAAIABAACAAsAAAAMAAEABAAHAAEAAAAMAAAABAAHAAAAAAALAAwABAADAAwAAAALAAsABAAJAAwAAAALAAoABAAJAAwAAAALAAkABAAJAAwAAAALAAgABAAJAAwAAAALAAcABAAJAAwAAAALAAYABAAJAAwAAAALAAUABAAJAAwAAAALAAQABAAJAAwAAAALAAMABAAJAAwAAAALAAIABAACAAsAAAALAAEABAAGAAEAAAALAAAABAAGAAAAAAAKAAwABAADAAwAAAAKAAsABAAJAAwAAAAKAAoABAAJAAwAAAAKAAkABAAJAAwAAAAKAAgABAAJAAwAAAAKAAcABAAJAAwAAAAKAAYABAAJAAwAAAAKAAUABAAJAAwAAAAKAAQABAAJAAwAAAAKAAMABAAJAAwAAAAKAAIABAACAAsAAAAKAAEABAABAAIAAAAKAAAABAABAAAAAAAJAAwABAADAAwAAAAJAAsABAAJAAwAAAAJAAoABAAJAAwAAAAJAAkABAAJAAwAAAAJAAgABAAJAAwAAAAJAAcABAAJAAwAAAAJAAYABAAJAAwAAAAJAAUABAAJAAwAAAAJAAQABAAJAAwAAAAJAAMABAAJAAwAAAAJAAIABAACAAsAAAAJAAEABAABAAIAAAAJAAAABAABAAAAAAAIAAwABAADAAwAAAAIAAsABAAFAAwAAAAIAAoABAACAAwAAAAIAAkABAAFAAsAAAAIAAgABAAJAAwAAAAIAAcABAAJAAwAAAAIAAYABAAJAAwAAAAIAAUABAAFAAwAAAAIAAQABAACAAwAAAAIAAMABAAFAAsAAAAIAAIABAACAAsAAAAIAAEABAABAAIAAAAIAAAABAABAAAAAAAHAAwABAADAAwAAAAHAAsABAACAAsAAAAHAAoABAAJAAwAAAAHAAkABAADAAwAAAAHAAgABAAJAAwAAAAHAAcABAAJAAwAAAAHAAYABAAJAAwAAAAHAAUABAACAAsAAAAHAAQABAAJAAwAAAAHAAMABAADAAwAAAAHAAIABAACAAsAAAAHAAEABAABAAIAAAAHAAAABAABAAAAAAAGAAwABAADAAwAAAAGAAsABAAEAAwAAAAGAAoABAADAAsAAAAGAAkABAAEAAsAAAAGAAgABAAJAAwAAAAGAAcABAAJAAwAAAAGAAYABAAJAAwAAAAGAAUABAAEAAwAAAAGAAQABAADAAsAAAAGAAMABAAEAAsAAAAGAAIABAACAAsAAAAGAAEABAABAAIAAAAGAAAABAABAAAAAAAFAAwABAADAAwAAAAFAAsABAAJAAwAAAAFAAoABAAJAAwAAAAFAAkABAAJAAwAAAAFAAgABAAJAAwAAAAFAAcABAAJAAwAAAAFAAYABAAJAAwAAAAFAAUABAAJAAwAAAAFAAQABAAJAAwAAAAFAAMABAAJAAwAAAAFAAIABAACAAsAAAAFAAEABAABAAIAAAAFAAAABAABAAAAAAAEAAwABAADAAwAAAAEAAsABAAJAAsAAAAEAAoABAAJAAwAAAAEAAkABAAJAAwAAAAEAAgABAAJAAwAAAAEAAcABAAJAAwAAAAEAAYABAAJAAwAAAAEAAUABAAJAAwAAAAEAAQABAAHAAwAAAAEAAMABAAHAAsAAAAEAAIABAACAAsAAAAEAAEABAACAAIAAAAEAAAABAACAAAAAAADAAwABAADAAwAAAADAAsABAAIAAsAAAADAAoABAAJAAwAAAADAAkABAAJAAwAAAADAAgABAAJAAwAAAADAAcABAAJAAwAAAADAAYABAAJAAwAAAADAAUABAAJAAwAAAADAAQABAAGAAwAAAADAAMABAAGAAsAAAADAAIABAACAAsAAAADAAEABAABAAIAAAADAAAABAABAAAAAAACAAwABAADAAwAAAACAAsABAAJAAwAAAACAAoABAAJAAwAAAACAAkABAAJAAwAAAACAAgABAAJAAwAAAACAAcABAAJAAwAAAACAAYABAAJAAwAAAACAAUABAAJAAwAAAACAAQABAAJAAwAAAACAAMABAAJAAwAAAACAAIABAACAAsAAAACAAEABAABAAIAAAACAAAABAABAAAAAAABAAwABAAAAAwAAAABAAsABAACAAwAAAABAAoABAACAAwAAAABAAkABAACAAwAAAABAAgABAACAAwAAAABAAcABAACAAwAAAABAAYABAACAAwAAAABAAUABAACAAwAAAABAAQABAACAAwAAAABAAMABAACAAwAAAABAAIABAAAAAsAAAABAAEABAABAAIAAAABAAAABAABAAAAAAAAAAwABAAAAAgAAAAAAAsABAAAAAgAAAAAAAoABAAAAAgAAAAAAAkABAAAAAgAAAAAAAgABAAAAAgAAAAAAAcABAAAAAgAAAAAAAYABAAAAAgAAAAAAAUABAAAAAgAAAAAAAQABAAAAAgAAAAAAAMABAAAAAgAAAAAAAIABAAAAAkAAAAAAAEABAAAAAIAAAAAAAAABAAAAAAAAAAXAAwABAABAAwAAAAXAAsABAADAAsAAAAXAAoABAADAAsAAAAXAAkABAADAAsAAAAXAAgABAADAAsAAAAXAAcABAADAAsAAAAXAAYABAADAAsAAAAXAAUABAADAAsAAAAXAAQABAADAAsAAAAXAAMABAADAAsAAAAXAAIABAABAAsAAAAXAAEABAABAAIAAAAXAAAABAABAAAAAAAWAAsABAAJAAwAAAAWAAoABAAJAAwAAAAWAAkABAAJAAwAAAAWAAgABAAJAAwAAAAWAAcABAAJAAwAAAAWAAYABAAJAAwAAAAWAAUABAAJAAwAAAAWAAQABAAJAAwAAAAWAAMABAAIAAsAAAAWAAIABAACAAsAAAAWAAEABAABAAIAAAAWAAAABAACAAAAAAAVAAwABAADAAwAAAAVAAsABAAJAAwAAAAVAAoABAAJAAwAAAAVAAkABAAJAAwAAAAVAAgABAAJAAwAAAAVAAcABAAJAAwAAAAVAAYABAAJAAwAAAAVAAUABAAJAAwAAAAVAAQABAAJAAwAAAAVAAMABAAJAAwAAAAVAAIABAACAAsAAAAVAAEABAABAAIAAAAVAAAABAABAAAAAAAUAAwABAADAAwAAAAUAAsABAAJAAwAAAAUAAcABAAJAAwAAAAUAAYABAAJAAwAAAAUAAUABAAJAAwAAAAUAAQABAAJAAwAAAAUAAMABAAJAAwAAAAUAAIABAACAAsAAAAUAAEABAABAAIAAAAUAAAABAABAAAAAAATAAwABAADAAwAAAATAAsABAAJAAwAAAATAAoABAAJAAwAAAATAAkABAAJAAwAAAATAAgABAAJAAwAAAATAAcABAAJAAwAAAATAAYABAAFAAwAAAATAAUABAAJAAwAAAATAAQABAAJAAwAAAATAAMABAAJAAwAAAATAAIABAACAAsAAAATAAEABAABAAIAAAATAAAABAABAAAAAAASAAwABAADAAwAAAASAAsABAAFAAwAAAASAAoABAACAAwAAAASAAkABAAFAAsAAAASAAgABAAJAAwAAAASAAcABAAHAAwAAAASAAYABAAJAAwAAAASAAUABAAFAAwAAAASAAQABAACAAwAAAASAAMABAAFAAsAAAASAAIABAACAAsAAAASAAEABAABAAIAAAASAAAABAABAAAAAAAXAA0ABAABAAoAAAAVAA0ABAABAAoAAAAUAA0ABAABAAoAAAATAA0ABAABAAoAAAASAA0ABAABAAoAAAARAA0ABAABAAoAAAAQAA0ABAABAAoAAAAPAA0ABAABAAoAAAAOAA0ABAABAAoAAAANAA0ABAABAAoAAAAMAA0ABAABAAoAAAALAA0ABAABAAoAAAAKAA0ABAABAAoAAAAJAA0ABAABAAoAAAAIAA0ABAABAAoAAAAHAA0ABAABAAoAAAAGAA0ABAABAAoAAAAFAA0ABAABAAoAAAAEAA0ABAABAAoAAAADAA0ABAABAAoAAAACAA0ABAABAAoAAAABAA0ABAABAAoAAAAAAA0ABAAAAAoAAAAUAAgABAAJAAwAAAAUAAkABAAJAAwAAAAUAAoABAAJAAwAAAAWAAwABAADAAwAAAAWAA0ABAABAAoAAAAYAAAABAAFAAAAAAAYAAEABAAFAAIAAAAYAAIABAAFAAkAAAAYAAMABAAFAAkAAAAYAAQABAAFAAkAAAAYAAUABAAFAAkAAAAYAAYABAAFAAkAAAAYAAcABAAFAAkAAAAYAAgABAAFAAkAAAAYAAkABAAFAAkAAAAYAAwABAAFAAkAAAAYAAoABAAFAAkAAAAYAAsABAAFAAkAAAAYAA0ABAAFAAoAAAA=")
tile_set = ExtResource("3_tx6oh")
script = ExtResource("4_h0wkv")

[node name="DecorationTileMapeLayers" type="TileMapLayer" parent="TileLayers"]
tile_map_data = PackedByteArray("AAAWAAMAAwAcAAIAAAAVAAQAAwAcAAMAAAABAAsAAwAbAAEAAAABAAwAAwAbAAIAAAACAAoAAwAbAAMAAAALAA0ABAAEAAoAAAANAA0ABAAEAAoAAAA=")
tile_set = ExtResource("3_tx6oh")

[node name="PlayerBoySpawn" parent="." instance=ExtResource("5_c2ihi")]
position = Vector2(191, 146)

[node name="LevelTransition" parent="." instance=ExtResource("5_nx7kk")]
position = Vector2(200, 215)
level = "res://Scenes/castle_outside.tscn"
size = 1
side = 3

[node name="LevelTransition_02" parent="." instance=ExtResource("5_nx7kk")]
position = Vector2(200, 28)
level = "res://Scenes/castle_02.tscn"
target_transition_area = "LevelTransition_02"
size = 1
side = 2

[node name="Puzzle_01" type="Node2D" parent="."]
script = ExtResource("8_p6y7p")

[node name="BarredDoor" parent="Puzzle_01" instance=ExtResource("9_n3wtj")]
position = Vector2(176, 27)

[node name="PressurePlate" parent="Puzzle_01" instance=ExtResource("6_br5cs")]
position = Vector2(120, 65)

[node name="PressurePlate2" parent="Puzzle_01" instance=ExtResource("6_br5cs")]
position = Vector2(120, 161)

[node name="PressurePlate3" parent="Puzzle_01" instance=ExtResource("6_br5cs")]
position = Vector2(280, 161)

[node name="PressurePlate4" parent="Puzzle_01" instance=ExtResource("6_br5cs")]
position = Vector2(280, 65)

[node name="Box" parent="." instance=ExtResource("11_ej232")]
position = Vector2(157.63, 86.3494)

[node name="Box2" parent="." instance=ExtResource("11_ej232")]
position = Vector2(120, 138)

[node name="Box3" parent="." instance=ExtResource("11_ej232")]
position = Vector2(242, 169)

[node name="Box4" parent="." instance=ExtResource("11_ej232")]
position = Vector2(234, 120)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.533333, 0.45098, 0.435294, 1)
energy = 0.99
blend_mode = 2

[node name="TorchHidden" parent="." instance=ExtResource("11_vwif8")]
position = Vector2(8, 215)

[node name="TorchHidden2" parent="." instance=ExtResource("11_vwif8")]
position = Vector2(393, 216)

[node name="Torch" parent="." instance=ExtResource("12_0kspe")]
position = Vector2(8.38152, 14.6473)

[node name="Torch2" parent="." instance=ExtResource("12_0kspe")]
position = Vector2(391.382, 14.6473)

[connection signal="activated" from="Puzzle_01/PressurePlate" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="deactivated" from="Puzzle_01/PressurePlate" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="activated" from="Puzzle_01/PressurePlate2" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="deactivated" from="Puzzle_01/PressurePlate2" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="activated" from="Puzzle_01/PressurePlate3" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="deactivated" from="Puzzle_01/PressurePlate3" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="activated" from="Puzzle_01/PressurePlate4" to="Puzzle_01" method="check_pressure_plates"]
[connection signal="deactivated" from="Puzzle_01/PressurePlate4" to="Puzzle_01" method="check_pressure_plates"]
